changes made for UI design, validation and Dashboard page

--- a/src/components/dashboard/dashboard.component.html
+++ b/src/components/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<p>Welcome {{userName}}</p>
+<div class="dashboard-container">
+    <div class="user-profile">
+        <div class="user-name">Name: {{retrievedUser.name}}</div>
+        <div class="user-password">Age: {{retrievedUser.age}}</div>
+    </div>
+    <div class="user-info">
+        <div class="user-edu"></div>
+        <div class="user-skills"></div>
+    </div>
+</div>
