--- a/src/components/login/login.component.scss
+++ b/src/components/login/login.component.scss
@@ -1,34 +1,135 @@
-.login-parent {
-    display: grid;
-    grid-template-columns: 65% 35%;
-    grid-gap: 2px;
-    place-items: center;
+.login-form {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: transparent;
+    border-radius: 10px;
+    color: #d3d5d8;
+    backdrop-filter: blur(5px);
 
-    .login-left {
-        width: 100%;
-        height: 100vh;
-        background-color: #95bce2;
+    h3 {
+        text-align: center;
+        padding-bottom: 15px;
+        border-bottom: 2px solid #95bce2;
     }
 
-    .login-right {
-        width: 100%;
-        height: 100vh;
-        background-color: #022c5b;
-        justify-content: center;
-        align-content: center;
-        align-items: center;
+    .error-msg {
+        color: red;
+        font-size: 18px;
+        font-weight: 600;
+        text-align: center;
+    }
 
-        .login-form {
-            border: 1px solid;
-            border-radius: 5px;
-            background-color: #95bce2;
-            color: #022c5b;
+    form {
+        padding: 0 20px;
+        box-sizing: border-box;
+        border: 1px #d3d5d8 solid;
+        border-radius: 15px;
+
+        .input-field {
             position: relative;
-            width: 60%;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 10px;
+            margin: 30px 0;
+            background: none;
+            border-bottom: 2px solid #d3d5d8;
+
+            .fa {
+                position: absolute;
+                background: none;
+                right: 2%;
+                top: 10px;
+            }
+
+            span::before {
+                content: '';
+                position: absolute;
+                top: 40px;
+                left: 0;
+                width: 0%;
+                transition: .5s;
+                height: 2px;
+                background: #95bce2;
+            }
+
+            input:focus~label,
+            input:valid~label {
+                top: -5px;
+                color: #95bce2;
+            }
+
+            input:focus~span::before,
+            input:valid~span::before {
+                width: 100%;
+            }
+
+            input {
+                width: 100%;
+                padding: 0 5px;
+                height: 40px;
+                font-size: 18px;
+                border: none;
+                background: none;
+                outline: none;
+                color:#d3d5d8;
+            }
+
+            label {
+                position: absolute;
+                color: #d3d5d8;
+                top: 50%;
+                left: 7px;
+                pointer-events: none;
+                font-size: 14px;
+                transition: .5s;
+                transform: translateY(-50%);
+            }
+        }
+
+        .forgot-password {
+            margin: -5px 0 20px 5px;
+            color: #d3d5d8;
+            cursor: pointer;
+            transition: .5s;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+
+        .login-submit-btn {
+            width: 100%;
+            height: 30px;
+            cursor: pointer;
+            border: 1px solid;
+            background: #95bce2;
+            border-radius: 15px;
+            transition: .5s;
+            color: #022c5b;
+            font-size: 16px;
+            font-weight: 800;
+            outline: none;
+
+            &:hover {
+                background: #022c5b;
+                color: #95bce2;
+                border-color: #95bce2;
+            }
+        }
+
+        .new-account-signup {
+            font-size: 14px;
+            text-align: center;
+            margin: 30px;
+            color: #d3d5d8;
+
+            a {
+                color: #95bce2;
+                text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
         }
     }
 }
