Changes made for dashboard basic design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 <div class="container">
+    <div class='flanders-logo'>
+        <img src="https://d2xhb4h80dct9w.cloudfront.net/wp-content/uploads/2020/06/Flanders-logo-drill-automation.png"
+            width="200" height="98" alt="Flanders Drill Automation Logo" data-retina_logo_url=""
+            class="fusion-standard-logo lazyloaded"
+            srcset="https://d2xhb4h80dct9w.cloudfront.net/wp-content/uploads/2020/06/Flanders-logo-drill-automation.png 1x"
+            data-ll-status="loaded">
+    </div>
     <div class="contianer-background">
         <router-outlet></router-outlet>
     </div>
