--- a/src/components/dashboard/dashboard.component.scss
+++ b/src/components/dashboard/dashboard.component.scss
@@ -8,6 +8,8 @@
     background: transparent;
     border-radius: 10px;
     color: #d3d5d8;
+    font-size: 20px;
+    font-weight: 900;
     backdrop-filter: blur(5px);
     border: 1px solid #d3d5d8;
 
@@ -15,19 +17,29 @@
     grid-template-columns: 2fr 1fr;
 
     .user-profile {
-        color: #d3d5d8;
-        border: 1px solid #d3d5d8;
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 40px;
         justify-content: center;
         align-items: center;
         align-content: center;
-        left: 50%;
+        margin: auto;
+
+        .user-label {
+            text-align: right;
+        }
+
+        .user-data {
+            text-align: left;
+        }
     }
 
     .user-info {
         border: 1px solid #d3d5d8;
         justify-content: center;
         align-items: center;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
     }
 }
