--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,7 +15,7 @@
         img {
             padding: 10px;
             opacity: .9;
-            background-image: linear-gradient(100deg,#002f4b,#95bce2);
+            /* background-image: linear-gradient(100deg,#002f4b,#95bce2); */
         }
     }
     
